# hass-addons

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  build_prep.sh  pyproject.toml  repository.yaml
.cursor/rules/: python-tooling.mdc  synced-addons.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/other-workflows/: build-app.yaml  builder.yaml  deploy-esp.yml  deploy-qsusb64.yml
.github/workflows/: ci.yml  deploy-addons.yml  deploy-control-group.yml  deploy-esp.yml  deploy-multi-mp.yml  deploy-qsusb64.yml  deployer.yml  deployer2.yml  sync-remotes.yml
hass-addon-control-group/: DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml
hass-addon-control-group/rootfs/etc/s6-overlay/s6-rc.d/cgroup/: run
hass-addon-esp/: Dockerfile  README.md  build.yaml  config.yaml
hass-addon-esp/rootfs/etc/s6-overlay/s6-rc.d/esp/: run
hass-addon-git-push/: Dockerfile  README.md  build.yaml  config.yaml
hass-addon-mbusd/: build.yaml
hass-addon-qsusb64/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
hass-addon-qsusb64/rootfs/etc/s6-overlay/s6-rc.d/qsusb64/: run
hass-addon-sma-em-dev/: config.yaml
hass-addon-sma-em-edge/: config.yaml
hass-addon-sunsynk-edge/: config.yaml
qsusb64-addon/: CHANGELOG.md  Dockerfile  README.md  config.yaml
qsusb64-addon/rootfs/etc/services.d/sunsynk/: run
scripts/: copy2local.cmd
src/ha_addon/: __init__.py  all_apis.py  helpers.py
src/ha_addon/ha_api/: __init__.py  base.py  ha_rest.py  ha_websocket.py  types.py
src/ha_addon_cgroup/: __main__.py
src/ha_addon_control_group/: __init__.py  __main__.py  cbridge.py  options.py  options_discover.py  options_file.py  test.py
src/ha_addon_esp/: __main__.py  esp.py
src/ha_addon_qsusb64/: __init__.py  __main__.py  qsusb.py  qwikswitch.py
src/ha_addon_qsusb64/addon/: bridge.py  entity_bridge.py  options.py
src/qsusb64/: __main__.py  helpers.py  main.py  qs_listen.py  qsusb.py  qwikswitch.py
src/qsusb64/addon/: bridge.py  options.py
src/tests/: test_qwikswitch.py
src/tests/ha_addon_cgroup/: __init__.py  test_cbridge.py  test_discovery.py  test_helpers.py
src/tests/ha_addon_esp/: test_main.py
src/tests/ha_addon_qsusb64/: test_main.py  test_qwikswitch.py
tests/: test_qwikswitch.py
