[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9,<0.10" ]

[project]
name = "ha-addon"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiohttp>=3.12,<4",
  "anyio>=4.12.1",
  "colorama",
  "colorlog",
  "icecream",
  "jmespath",
  "mqtt-entity[options]",
]
optional-dependencies.hidapi = [ "hidapi==0.14.0.post4" ]

[dependency-groups]
dev = [
  "codespell",
  "pyproject-fmt",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "types-colorama",
  "types-jmespath",
  "types-pyyaml",
  "zuban>=0.5.1",
]

[tool.uv]
build-backend.module-name = [ "ha_addon", "ha_addon_control_group", "ha_addon_esp", "ha_addon_qsusb64" ]

[tool.ruff]
include = [ "**/pyproject.toml", "src/**/*.py" ]
format.line-ending = "lf"
format.docstring-code-format = true
lint.select = [
  "A",     # flake8-builtins
  "ASYNC", # flake8-async
  "B",     # bugbear
  "D",     # pydocstyle
  "E",     # pycodestyle
  "F",     # pyflakes
  "G",     # flake8-logging-format
  "I",     # isort
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PL",    # pylint
  "PTH",   # flake8-pathlib
  "PYI",   # flake8-pyi
  "RUF",   # ruff
  "UP",    # pyupgrade
  "W",     # pycodestyle
]
lint.ignore = [ "D203", "D213", "E203", "E501", "PLR2004" ]
lint.pylint.max-args = 7

[tool.codespell]
skip = [ "hass-addon-sma-em-edge", "PKG-INFO" ]
ignore-words-list = [ "HASS", "hass", "Hass", "iif" ]

[tool.pytest]
ini_options.pythonpath = [ "src" ]
ini_options.filterwarnings = "ignore:.+@coroutine.+deprecated.+"
ini_options.testpaths = "src/tests"
ini_options.norecursedirs = [ ".git", "modules" ]
ini_options.log_cli = true
ini_options.log_cli_level = "DEBUG"
ini_options.asyncio_mode = "auto"
ini_options.addopts = "--cov=src --cov-report xml:cov.xml"

[tool.zuban]
warn_unreachable = false
